h_250px banner of all Page

--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -1460,9 +1460,9 @@ position: absolute;
   .w_70{
     width: 70%;
   }
-  .h_250px{
+  /* .h_250px{
     height: 100%;
-  }
+  } */
   .top_head_title{
     padding: 0px 25px;
   }
