--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -1192,7 +1192,7 @@ position: absolute;
   margin-right: 40px;
 }
 .serve_pag{
-    background: url('..//images/service3.png');
+    background: url('..//Images/service3.png');
     width:100%;
     height: 516px
 }
